fixes navbar padding issues on small screens, adds db connection pools from 10 to a max of 15

--- a/components/Header/header.module.scss
+++ b/components/Header/header.module.scss
@@ -58,4 +58,7 @@ $pulse-secondary-color: #a991d4;
       left: 20px;
     }
   }
+  .toggler {
+    padding: 10px;
+  }
 }
